# documents_managment_project

./: README.md  pyproject.toml
backend/backend/: settings.py  urls.py
backend/portal/: admin.py  forms.py  models.py  urls.py  views.py
backend/portal/migrations/: 0001_initial.py
backend/portal/templates/: about.html  base.html  close-account.html  contact.html  createaccount.html  edit-open-account.html  home.html  navbar.html  open-account.html  profile.html  signin.html
backend/portal/templates/allauth/layouts/: base.html
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/pages/: About.tsx  Contact.tsx  CreateAccount.tsx  Home.tsx  Layout.tsx  NoPage.tsx  Signin.tsx
frontend/src/pages/CSS/: About.css  Contact.css  CreateAccount.css  Home.css  Layout.css  NoPage.css  Signin.css
