[tool.poetry]
name = "documents-managment-project"
version = "0.1.0"
description = "All in One Documents Solution"
authors = ["Edmon Sebit <edmontheprogrammer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
devtool = "^0.0.2"
psycopg2 = "^2.9.9"
django-allauth = "^0.63.2"
djangorestframework = "^3.15.1"
django-rest-auth = "^0.9.5"
django-rest-authtoken = "^2.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
